--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="wrapper">
             <p class="helpline-title">For Further Inquires :</p>
 
-            <p class="helpline-number">+01 (123) 4567 90</p>
+            <p class="helpline-number">+91 123 456 7890</p>
           </div>
 
         </a>
@@ -163,7 +163,7 @@
       <section class="hero" id="home">
         <div class="container">
 
-          <h2 class="h1 hero-title">Journey to explore world</h2>
+          <h2 class="h1 hero-title">Journey to explore the world</h2>
 
           <p class="hero-text">
             Ac mi duis mollis. Sapiente? Scelerisque quae, penatibus? Suscipit class corporis nostra rem quos
@@ -207,13 +207,13 @@
             </div>
 
             <div class="input-wrapper">
-              <label for="checkin" class="input-label">Checkin Date**</label>
+              <label for="checkin" class="input-label">Check-in Date*</label>
 
               <input type="date" name="checkin" id="checkin" required class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="checkout" class="input-label">Checkout Date*</label>
+              <label for="checkout" class="input-label">Check-out Date*</label>
 
               <input type="date" name="checkout" id="checkout" required class="input-field">
             </div>
@@ -236,7 +236,7 @@
       <section class="popular" id="destination">
         <div class="container">
 
-          <p class="section-subtitle">Uncover place</p>
+          <p class="section-subtitle">Discover places</p>
 
           <h2 class="h2 section-title">Popular destination</h2>
 
@@ -266,7 +266,7 @@
                   </div>
 
                   <p class="card-subtitle">
-                    <a href="#">Italy</a>
+                    <a href="#">Mexico</a>
                   </p>
 
                   <h3 class="h3 card-title">
@@ -352,7 +352,7 @@
 
           </ul>
 
-          <button class="btn btn-primary">More destintion</button>
+          <button class="btn btn-primary">Load More destintions</button>
 
         </div>
       </section>
@@ -389,7 +389,7 @@
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
+                  <h3 class="h3 card-title">Experience The Great Holiday On Penang Beach</h3>
 
                   <p class="card-text">
                     Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet porttitor! Eaque,
@@ -402,7 +402,7 @@
                       <div class="meta-box">
                         <ion-icon name="time"></ion-icon>
 
-                        <p class="text">7D/6N</p>
+                        <p class="text">3D/2N</p>
                       </div>
                     </li>
 
@@ -430,7 +430,7 @@
 
                   <div class="wrapper">
 
-                    <p class="reviews">(25 reviews)</p>
+                    <p class="reviews">(254 reviews)</p>
 
                     <div class="card-rating">
                       <ion-icon name="star"></ion-icon>
@@ -443,7 +443,7 @@
                   </div>
 
                   <p class="price">
-                    $750
+                    ₹27,599
                     <span>/ per person</span>
                   </p>
 
@@ -463,7 +463,7 @@
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Summer Holiday To The Oxolotan River</h3>
+                  <h3 class="h3 card-title">Summer Holiday To The MAE KLONG River</h3>
 
                   <p class="card-text">
                     Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet porttitor! Eaque,
@@ -476,7 +476,7 @@
                       <div class="meta-box">
                         <ion-icon name="time"></ion-icon>
 
-                        <p class="text">7D/6N</p>
+                        <p class="text">4D/3N</p>
                       </div>
                     </li>
 
@@ -484,7 +484,7 @@
                       <div class="meta-box">
                         <ion-icon name="people"></ion-icon>
 
-                        <p class="text">pax: 10</p>
+                        <p class="text">pax: 12</p>
                       </div>
                     </li>
 
@@ -492,7 +492,7 @@
                       <div class="meta-box">
                         <ion-icon name="location"></ion-icon>
 
-                        <p class="text">Malaysia</p>
+                        <p class="text">Thailand</p>
                       </div>
                     </li>
 
@@ -504,7 +504,7 @@
 
                   <div class="wrapper">
 
-                    <p class="reviews">(20 reviews)</p>
+                    <p class="reviews">(207 reviews)</p>
 
                     <div class="card-rating">
                       <ion-icon name="star"></ion-icon>
@@ -517,7 +517,7 @@
                   </div>
 
                   <p class="price">
-                    $520
+                    ₹15,520
                     <span>/ per person</span>
                   </p>
 
@@ -550,7 +550,7 @@
                       <div class="meta-box">
                         <ion-icon name="time"></ion-icon>
 
-                        <p class="text">7D/6N</p>
+                        <p class="text">5D/4N</p>
                       </div>
                     </li>
 
@@ -566,7 +566,7 @@
                       <div class="meta-box">
                         <ion-icon name="location"></ion-icon>
 
-                        <p class="text">Malaysia</p>
+                        <p class="text">Greece</p>
                       </div>
                     </li>
 
@@ -578,7 +578,7 @@
 
                   <div class="wrapper">
 
-                    <p class="reviews">(40 reviews)</p>
+                    <p class="reviews">(401 reviews)</p>
 
                     <div class="card-rating">
                       <ion-icon name="star"></ion-icon>
@@ -591,7 +591,7 @@
                   </div>
 
                   <p class="price">
-                    $660
+                    ₹74,499
                     <span>/ per person</span>
                   </p>
 
@@ -622,12 +622,11 @@
 
           <p class="section-subtitle">Photo Gallery</p>
 
-          <h2 class="h2 section-title">Photo's From Travellers</h2>
+          <h2 class="h2 section-title">Photos From Travellers</h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-            Sit ornare
-            mollitia tenetur, aptent.
+            Here are some photos shared by people who went on to explore new and exciting places through our services.
+            Why not make this your next journey
           </p>
 
           <ul class="gallery-list">
@@ -681,7 +680,8 @@
           <div class="cta-content">
             <p class="section-subtitle">Call To Action</p>
 
-            <h2 class="h2 section-title">Ready For Unforgatable Travel. Remember Us!</h2>
+            <h2 class="h2 section-title">Ready For Unforgettable Travel Experience?<br/>
+               We Got You!</h2>
 
             <p class="section-text">
               Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
@@ -690,7 +690,7 @@
             </p>
           </div>
 
-          <button class="btn btn-secondary">Contact Us !</button>
+          <button class="btn btn-secondary">Contact Us </button>
 
         </div>
       </section>
@@ -738,7 +738,7 @@
             <li class="contact-item">
               <ion-icon name="call-outline"></ion-icon>
 
-              <a href="tel:+01123456790" class="contact-link">+01 (123) 4567 90</a>
+              <a href="tel:+91123456790" class="contact-link">+91 123 456 7890</a>
             </li>
 
             <li class="contact-item">
@@ -750,7 +750,7 @@
             <li class="contact-item">
               <ion-icon name="location-outline"></ion-icon>
 
-              <address>3146 Koontz, California</address>
+              <address>Delhi, India</address>
             </li>
 
           </ul>
@@ -788,11 +788,11 @@
           </li>
 
           <li>
-            <a href="#" class="footer-bottom-link">Term & Condition</a>
+            <a href="#" class="footer-bottom-link">Terms & Conditions</a>
           </li>
 
           <li>
-            <a href="#" class="footer-bottom-link">FAQ</a>
+            <a href="#" class="footer-bottom-link">FAQs</a>
           </li>
 
         </ul>
